--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Samara Mendez</h1>
+				<p>I am a fifth-year PhD student at the University of Colorado, Boulder focusing on Industrial Organization, Environmental/Resource Economics, and Behavioral Economics with an emphasis on food and resource conservation policy. <a href="/about">Read more about me here</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:samaramendez@gmail.com">email</a></li>
+        		<li><a href="https://github.com/samaramendez">github.com/samaramendez</a></li>
 			</ul>
 		</footer>
 	</body>
