--- a/index.html
+++ b/index.html
@@ -1,31 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Samara Mendez</title>
-			<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/teaching">Teaching</a></li>
-        		<li><a href="/research">Research</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Samara Mendez</h1>
-				<p>I am a fifth-year PhD student at the University of Colorado, Boulder focusing on Industrial Organization, Environmental/Resource Economics, and Behavioral Economics with an emphasis on food and resource conservation policy. <a href="/about">Read more about me here</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:samaramendez@gmail.com">email</a></li>
-        		<li><a href="https://github.com/samaramendez">github.com/samaramendez</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Samara Mendez
+---
+<div class="blurb">
+	<h1>Samara Mendez Bio</h1>
+	<p>I am a fifth-year PhD student at the University of Colorado, Boulder focusing on Industrial Organization, Environmental/Resource Economics, and Behavioral Economics with an emphasis on food and resource conservation policy. <a href="/about">About Me</a></p>
+</div><!-- /.blurb -->
