--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: About Me
+title: Samara Mendez
 ---
 <div class="blurb">
 	<p> I am a fifth-year PhD student at the University of Colorado, Boulder. 
