--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Samara Mendez
 ---
 <div class="blurb">
-	<h1>Samara Mendez Bio</h1>
-	<p>I am a fifth-year PhD student at the University of Colorado, Boulder focusing on Industrial Organization, Environmental/Resource Economics, and Behavioral Economics with an emphasis on food and resource conservation policy. <a href="/about">About Me</a></p>
+	<h2>Samara Mendez </h2>
+	<p>I am a PhD candidate at the University of Colorado, Boulder focusing on Industrial Organization, Environmental/Resource Economics, and Behavioral Economics with an emphasis on food and resource conservation policy. <a href="/about">About Me</a></p>
 </div><!-- /.blurb -->
