--- a/about/index.html
+++ b/about/index.html
@@ -2,8 +2,9 @@
 layout: default
 title: Samara Mendez
 ---
-
-	<div class="blurb">
+<div class="blurb">
+ 		Working Papers:
+		<ul>
 
 	<p> I am a fifth-year PhD student at the University of Colorado, Boulder. 
 
@@ -11,5 +12,6 @@ title: Samara Mendez
 	My current research focuses on the effects of taxation and disclosure policies in imperfectly competitive industries. Analysis methods include structural estimation and applied theoretical modeling. My research agenda includes analysis of the waste infrastructure determinants and experimental studies on behavioral responses to information policies and conservation campaigns.</p>
 
 	<p> I am originally from Austin, Texas.</p>
-
+	</ul>
+	
 </div><!-- /.blurb -->
