--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 layout: default
 title: Samara Mendez
 ---
-<div class="blurb">
 	<h2>Samara Mendez </h2>
-	<p>I am a PhD candidate at the University of Colorado, Boulder focusing on Industrial Organization, Environmental/Resource Economics, and Behavioral Economics with an emphasis on food and resource conservation policy. <a href="/about">About Me</a></p>
+
+<div class="group">
+    <div class="left"> <br><br>
+	<p>I am a PhD candidate at the University of Colorado, Boulder <br> Industrial Organization, Environmental/Resource Economics, and Behavioral Economics <br> Emphasis on food and resource conservation policy. <br> <a href="/about">About Me</a></p>
+    </div>
+    <div class="right">
+		<img src="2018-02-27 12.56.47.png" alt="Samara Mendez"> 
+    </div>
 </div><!-- /.blurb -->
