--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ title: Samara Mendez
 	<p>I am a PhD candidate at the University of Colorado, Boulder <br> Industrial Organization, Environmental/Resource Economics, and Behavioral Economics <br> Emphasis on food and resource conservation policy. <br> <a href="/about">About Me</a></p>
     </div>
     <div class="right">
-		<img src="2018-02-27 12.56.47.png" alt="Samara Mendez"> 
+		<img src="2018-02-27 12.56.47.png" alt="Samara Mendez" width="48"> 
     </div>
 </div><!-- /.blurb -->
