--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@ title: Samara Mendez
 
 <div class="group">
     <div class="left"> <br><br>
-	<p>I am a PhD candidate at the University of Colorado, Boulder <br> Industrial Organization, Environmental/Resource Economics, and Behavioral Economics <br> Emphasis on food and resource conservation policy. <br> <a href="/about">About Me</a></p>
+	<p>I am a PhD candidate at the University of Colorado, Boulder </p>
+	    <br> Industrial Organization, Environmental/Resource Economics, <br> and Behavioral Economics </p> 
+	<p>Emphasis on food and resource conservation policy. </p> 
+	<p> <a href="/about">About Me</a></p>
     </div>
     <div class="right">
-		<img src="2018-02-27 12.56.47.png" alt="Samara Mendez" width="48"> 
+		<img src="2018-02-27 12.56.47.png" alt="Samara Mendez" width="80"> 
     </div>
 </div><!-- /.blurb -->
