--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Samara Mendez
 
 <div class="group">
     <div class="left"> <br><br>
-	<p>I am a PhD candidate at the University of Colorado, Boulder </p>
+	<p>PhD candidate at the University of Colorado Boulder </p>
 	<p> Industrial Organization, Environmental/Resource Economics, <br> and Behavioral Economics </p> 
 	<p>Emphasis on food and resource conservation policy. </p> 
 	<p> <a href="/about">About Me</a></p>
