--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ title: Samara Mendez
 	<p> <a href="/about">About Me</a></p>
     </div>
     <div class="right">
-		<img src="2018-02-27 12.56.47.png" alt="Samara Mendez" width="80"> 
+		<img align="right" src="2018-02-27 12.56.47.png" alt="Samara Mendez" width="100"> 
     </div>
 </div><!-- /.blurb -->
