--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@ title: Samara Mendez
 ---
 	<h2>Samara Mendez </h2>
 
-<div class="group">
-    <div class="left"> <br><br>
+<img align="right" src="2018-02-27 12.56.47.png" alt="Samara Mendez" width="100">
+
+<div class="blurb">
+	
 	<p>PhD candidate at the University of Colorado Boulder </p>
 	<p> Industrial Organization, Environmental/Resource Economics, <br> and Behavioral Economics </p> 
 	<p>Emphasis on food and resource conservation policy. </p> 
 	<p> <a href="/about">About Me</a></p>
-    </div>
-    <div class="right">
-		<img align="right" src="2018-02-27 12.56.47.png" alt="Samara Mendez" width="100"> 
-    </div>
+
 </div><!-- /.blurb -->
