--- a/teaching/index.html
+++ b/teaching/index.html
@@ -3,7 +3,15 @@ layout: default
 title: Samara Mendez
 ---
 <div class="blurb">
- 		Instructor of Record, University of Colorado Boulder:
+ 		
+		Pedagogy Leadership, University of Colorado Boulder:
+		<ul>	
+		<li>Graduate Instructor Mentor: Spring 2018</li>
+		<li>Lead Graduate Instructor: Fall 2016, Spring 2016, Fall 2017</li>
+		<li>Instructor, Economics English Immersion Training: Fall 2017 </li>
+		</ul>
+	
+		Instructor of Record, University of Colorado Boulder:
 		<ul>
 		<li>Economics English Immersion Training (Fall 2017)</li>
 		<li>Natural Resource Economics (Fall 2016) </li>
