--- a/404.html
+++ b/404.html
@@ -1,4 +1,3 @@
-
 ---
 layout: default
 title: "404: Page not found"
@@ -7,5 +6,5 @@ permalink: 404.html
 
 <div class="page">
   <h1 class="page-title">404: Page not found</h1>
-  <p class="lead">Oops, looks like someone divided by zero, and this page was the first to get sucked into the hole ripped in space/time.<a href="{{ site.baseurl }}/">Head back home</a> where the problem is defined.</p>
+  <p class="lead">Oops, looks like someone divided by zero, and this page got sucked into the hole ripped in space/time. <a href="{{ site.baseurl }}/">Head back home</a> where the problem is defined.</p>
 </div>
