--- a/teaching/index.html
+++ b/teaching/index.html
@@ -4,26 +4,26 @@ title: Samara Mendez
 ---
 <div class="blurb">
  		
-		Pedagogy Leadership, University of Colorado Boulder:
+		<h2> Pedagogy Leadership, University of Colorado Boulder:</h2> 
 		<ul>	
 		<li>Graduate Instructor Mentor: Spring 2018</li>
 		<li>Lead Graduate Instructor: Fall 2016, Spring 2016, Fall 2017</li>
 		<li>Instructor, Economics English Immersion Training: Fall 2017 </li>
 		</ul>
 	
-		Instructor of Record, University of Colorado Boulder:
+		<h2> Instructor of Record, University of Colorado Boulder:</h2> 
 		<ul>
 		<li>Economics English Immersion Training (Fall 2017)</li>
 		<li>Natural Resource Economics (Fall 2016) </li>
 		<li> Math Tools for Economists (Fall 2015-Summer 2016, Fall 2017) </li>
 		</ul>
 
-		Teaching Assistant and Recitation Leader, University of Colorado Boulder: 
+		<h2> Teaching Assistant and Recitation Leader, University of Colorado Boulder: </h2> 
 		<ul>
 		<li> Principles of Microeconomics, Principles of Macroeconomics (Fall 2013-Spring 2015) </li>
 		</ul>
     
-		Supplemental Instruction Leader, University of Texas Austin: 
+		<h2> Supplemental Instruction Leader, University of Texas Austin:</h2>  
 		<ul>
 		<li> Principles of Macroeconomics (Fall 2011-Spring 2013) </li>
 		</ul>
