--- a/research/index.html
+++ b/research/index.html
@@ -3,18 +3,18 @@ layout: default
 title: Samara Mendez
 ---
 <div class="blurb">
- 		Working Papers:
+ 		<h2> Working Papers: </h2>
 		<ul>
 		<li>Just Label It? The Effect of Labels in the Market for Genetically Modified Foods </li>
 		<li> The Effects of the Low-Income Broadband Internet Subsidy (with Gabor Molnar and Scott Savage) </li>
 		<li> Incidence and Welfare Effects of Placement of Excise Taxes in Highly Concentrated Markets (with Chrystie Burr)</li>
 		</ul>
 
-		Research Experience: 
+		<h2> Research Experience: </h2> 
 		<ul>
-    <li>Assisting Dr. Scott Savage, University of Colorado, Boulder (2015) </li>
-    <li>Project Management for Assistant Vice Chancellor for Research, University of Colorado Boulder (2015) </li>
-    <li>Assisting Drs. Valerie Bencivenga and Beatrix Paal, University of Texas, Austin (2013)		 </li>
+   		 <li>Assisting Dr. Scott Savage, University of Colorado, Boulder (2015) </li>
+    		<li>Project Management for Assistant Vice Chancellor for Research, University of Colorado Boulder (2015) </li>
+    		<li>Assisting Drs. Valerie Bencivenga and Beatrix Paal, University of Texas, Austin (2013)		 </li>
     </ul>
     
 				
