--- a/about/index.html
+++ b/about/index.html
@@ -2,6 +2,9 @@
 layout: default
 title: Samara Mendez
 ---
+
+<img align="right" src="2018-02-27 12.56.47.png" alt="Samara Mendez" width="150">
+
 <div class="blurb">
 		<ul>
 
