--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Samara Mendez
 ---
 
-<img align="right" src="2018-02-27 12.56.47.png" alt="Samara Mendez" width="150">
+<img align="right" src="Hi_How_Are_You_Austin_2005.jpg" alt="Samara Mendez" width="100">
 
 <div class="blurb">
 		<ul>
