--- a/research/index.html
+++ b/research/index.html
@@ -12,7 +12,7 @@ title: Samara Mendez
 
 		<h2> Research Experience: </h2> 
 		<ul>
-		<li> Using Classroom Observation Technology to Assess Teaching Improvement in Short-Term Microteaching Environments, Teaching as Research Experimental Study, CU Boulder (2017) </li>
+		<li> Using Classroom Observation Technology to Assess Teaching Improvement in Short-Term Microteaching Environments, <br> Teaching as Research Experimental Study, CU Boulder (2017) </li>
    		 <li>Assisting Dr. Scott Savage, University of Colorado, Boulder (2015) </li>
     		<li>Project Management for Assistant Vice Chancellor for Research, University of Colorado Boulder (2015) </li>
     		<li>Assisting Drs. Valerie Bencivenga and Beatrix Paal, University of Texas, Austin (2013)		 </li>
