--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@ title: Samara Mendez
 	<p> I am a fifth-year PhD student at the University of Colorado, Boulder. <br><br> I am interested in research topics at the intersection of Industrial Organization and Environmental/Resource Economics, with an emphasis on food and resource conservation policy.
 	My current research focuses on the effects of taxation and disclosure policies in imperfectly competitive industries. Analysis methods include structural estimation and applied theoretical modeling. My research agenda includes analysis of the waste infrastructure determinants and experimental studies on behavioral responses to information policies and conservation campaigns.
 
-	<br>I am originally from Austin, Texas.</p>
+	<br><br>I am originally from Austin, Texas.</p>
 	</ul>
 	
 </div><!-- /.blurb -->
