update paper titles

--- a/research/index.html
+++ b/research/index.html
@@ -6,8 +6,8 @@ title: Samara Mendez
  		<h2> Working Papers: </h2>
 		<ul>
 		<li>Just Label It? The Effect of Labels in the Market for Genetically Modified Foods </li>
-		<li> The Effects of the Low-Income Broadband Internet Subsidy (with Gabor Molnar and Scott Savage) </li>
-		<li> Incidence and Welfare Effects of Placement of Excise Taxes in Highly Concentrated Markets (with Chrystie Burr)</li>
+		<li> Universal Service Policies for Fixed Broadband: The Effect of the Lifeline Program on Prices, Demand, and Welfare (with Gabor Molnar and Scott Savage) </li>
+		<li> Brand Power, Pass-through, and Consumption Effects of Municipal Taxes: Evidence from Berkeley, CA</li>
 		</ul>
 
 		<h2> Research Experience: </h2> 
