--- a/about/index.html
+++ b/about/index.html
@@ -8,8 +8,8 @@ title: Samara Mendez
 <div class="blurb">
 		<ul>
 
-	<p> I am a PhD candidate at the University of Colorado, Boulder. <br><br> I am interested in research topics at the intersection of Industrial Organization and Environmental/Resource Economics, with an emphasis on food and resource conservation policy.
-	My current research focuses on the effects of taxation and disclosure policies in imperfectly competitive industries. Analysis methods include structural estimation and applied theoretical modeling. My research agenda includes analysis of the waste infrastructure determinants and experimental studies on behavioral responses to information policies and conservation campaigns.
+	<p> I am a PhD candidate at the University of Colorado, Boulder, and I am the economist at <a href="http://www.humaneleaguelabs.org/">Humane League Labs.<a/> <br><br> I am interested in research topics at the intersection of Industrial Organization and Environmental/Agricultural Economics, with an emphasis on food policy.
+	My current research focuses on the effects of taxation and labeling policies in imperfectly competitive industries. I have expertise in structural estimation and applied theoretical modeling. My research agenda includes understanding the distributional and market structure effects of food taxes and investigating economic policies for innovative foods.
 
 	<br><br>I am originally from Austin, Texas.</p>
 	</ul>
