--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ title: Samara Mendez
 
 <div class="blurb">
 	
-	<p>PhD candidate at the University of Colorado Boulder </p>
-	<p> Industrial Organization, Environmental/Resource Economics, <br> and Behavioral Economics </p> 
+	<p>PhD candidate at the University of Colorado Boulder, Economist at Humane League Labs </p>
+	<p> Industrial Organization, Environmental/Agricultural Economics, <br> and Behavioral Economics </p> 
 	<p>Emphasis on food and resource conservation policy. </p> 
 	<br><br>
 
