--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@ title: Samara Mendez
 
 <div class="blurb">
 	
-	<p>PhD candidate at the University of Colorado Boulder, Economist at Humane League Labs </p>
+	<p>PhD candidate at the University of Colorado Boulder, </p> 
+	<p> Economist at Humane League Labs </p>
+	<br>
 	<p> Industrial Organization, Environmental/Agricultural Economics, <br> and Behavioral Economics </p> 
 	<p>Emphasis on food and resource conservation policy. </p> 
 	<br><br>
