--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Samara Mendez
 
 <div class="blurb">
 	
-	<p>PhD candidate at the University of Colorado Boulder, <br> Economist at Humane League Labs </p>
+	<p>Economist at Humane League Labs, <br> PhD candidate at the University of Colorado Boulder (defended 12/2018  </p>
 	<p> Industrial Organization, Environmental/Agricultural Economics, <br> and Behavioral Economics </p> 
 	<p>Emphasis on food and resource conservation policy. </p> 
 	<br><br>
