--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@ title: Samara Mendez
 <div class="blurb">
 		<ul>
 
-	<p> I am the economist for <a href="http://www.humaneleaguelabs.org/">Humane League Labs,</a> and I recently defended my dissertation as a PhD candidate at the University of Colorado, Boulder. <br><br>
+	<p> I am the economist for <a href="https://thehumaneleague.org/labs">The Humane League Labs,</a> and I recently completed my PhD at the University of Colorado, Boulder. <br><br>
 	I am interested in research topics at the intersection of Industrial Organization and Environmental and Agricultural Economics, with an emphasis on food policy.
 	My current research focuses on the effects of taxation and labeling policies in imperfectly competitive industries. I have expertise in structural estimation and applied theoretical modeling. My research agenda includes understanding the distributional and market structure effects of food taxes and investigating economic policies for innovative foods.
 
