Added Works in Progress and Publications

--- a/research/index.html
+++ b/research/index.html
@@ -3,13 +3,26 @@ layout: default
 title: Samara Mendez
 ---
 <div class="blurb">
- 		<h2> Working Papers: </h2>
+ 		<h2> Publications: </h2>
+		<ul>
+		<li>Measuring Better Chicken Commitment–Compliant Chicken Supply </li>
+		<li>US Egg Production Data Set </li>
+		</ul>
+	
+	<h2> Working Papers: </h2>
 		<ul>
 		<li>Just Label It? The Effect of Labels in the Market for Genetically Modified Foods </li>
 		<li> Universal Service Policies for Fixed Broadband: The Effect of the Lifeline Program on Prices, Demand, and Welfare (with Gabor Molnar and Scott Savage) </li>
 		<li> Brand Power, Pass-through, and Consumption Effects of Municipal Taxes: Evidence from Berkeley, CA</li>
 		</ul>
-
+	
+ 		<h2> Works in Progress: </h2>
+		<ul>
+		<li>Milking It: Exploring the impact of plant-based dairy alternatives in the US (with Jacob Peacock) </li>
+		<li>Estimating BCC-compliant chicken demand from US food businesses (with George Garcia, III) </li>
+		<li>Impact of Corporate Commitments to Source Cage-Free Eggs on Layer Hen Housing (with Jacob Peacock and Matt Butner)</li>
+		</ul>
+	
 		<h2> Research Experience: </h2> 
 		<ul>
 		<li> Using Classroom Observation Technology to Assess Teaching Improvement in Short-Term Microteaching Environments, <br> Teaching as Research Experimental Study, CU Boulder (2017) </li>
