--- a/research/index.html
+++ b/research/index.html
@@ -4,16 +4,16 @@ title: Samara Mendez
 ---
 <div class="blurb">
  		<h2> Publications: </h2>
-		<ul>
-		<li>Measuring Better Chicken Commitment–Compliant Chicken Supply </li>
-		<li>US Egg Production Data Set </li>
+		<ul> 
+		<li><a href="https://doi.org/10.31219/osf.io/8v2k9">Measuring Better Chicken Commitment–Compliant Chicken Supply</a> </li>
+		<li><a href="https://doi.org/10.31219/osf.io/wta3q">US Egg Production Data Set</a> </li>
 		</ul>
 	
 	<h2> Working Papers: </h2>
 		<ul>
 		<li>Just Label It? The Effect of Labels in the Market for Genetically Modified Foods </li>
-		<li> Universal Service Policies for Fixed Broadband: The Effect of the Lifeline Program on Prices, Demand, and Welfare (with Gabor Molnar and Scott Savage) </li>
-		<li> Brand Power, Pass-through, and Consumption Effects of Municipal Taxes: Evidence from Berkeley, CA</li>
+		<li>Universal Service Policies for Fixed Broadband: The Effect of the Lifeline Program on Prices, Demand, and Welfare (with Gabor Molnar and Scott Savage) </li>
+		<li>Brand Power, Pass-through, and Consumption Effects of Municipal Taxes: Evidence from Berkeley, CA</li>
 		</ul>
 	
  		<h2> Works in Progress: </h2>
