--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,7 @@ title: Samara Mendez
 
 	<p> I am an economist at <a href="https://rethinkpriorities.org/">Rethink Priorities,</a> with a PhD from the University of Colorado, Boulder. <br><br>
 	I am interested in research topics at the intersection of Industrial Organization and Environmental and Agricultural Economics, with an emphasis on food policy.
-	My current research focuses on the effects of policies and advocacy strategies on agricultural production systems and consumer behavior. I have expertise in structural estimation and applied theoretical modeling. My research agenda includes understanding the distributional and market structure effects of food taxes and investigating economic policies for innovative foods.
+	My current research focuses on the effects of policies and advocacy strategies on agricultural production systems, consumer behavior, and the animals and people impacted by those systems. I have expertise in structural estimation and applied theoretical modeling. My research agenda includes understanding the distributional and market structure effects of food taxes and investigating economic policies for innovative foods.
 
 	<br><br>I am originally from Austin, Texas.</p>
 	</ul>
