--- a/research/index.html
+++ b/research/index.html
@@ -5,28 +5,30 @@ title: Samara Mendez
 <div class="blurb">
  		<h2> Publications: </h2>
 		<ul> 
+		<li><a href="https://doi.org/10.1086/714504">The Impacts of the Lifeline Subsidy on High-Speed Internet Access (with Gabor Molnar and Scott Savage) </li>
+		<li><a href="https://doi.org/10.31219/osf.io/j89qm">Milking It: Exploring the impact of plant-based dairy alternatives in the US (with Jacob Peacock) </li>
+		<li><a href="https://doi.org/10.31219/osf.io/tdghp">Milking It: Exploring the impact of plant-based dairy alternatives in the US - Preregistration (with Jacob Peacock) </li>
+		<li><a href="https://doi.org/10.31219/osf.io/hkrsm">Impact of Corporate Commitments to Source Cage-Free Eggs on Layer Hen Housing - Preregistration (with Jacob Peacock and Matt Butner)</li>
 		<li><a href="https://doi.org/10.31219/osf.io/8v2k9">Measuring Better Chicken Commitment–Compliant Chicken Supply</a> </li>
 		<li><a href="https://doi.org/10.31219/osf.io/wta3q">US Egg Production Data Set</a> </li>
 		</ul>
 	
 	<h2> Working Papers: </h2>
 		<ul>
+		<li>Impact of Corporate Commitments to Source Cage-Free Eggs on Layer Hen Housing (with Jacob Peacock and Matt Butner)</li>
 		<li>Just Label It? The Effect of Labels in the Market for Genetically Modified Foods </li>
-		<li>Universal Service Policies for Fixed Broadband: The Effect of the Lifeline Program on Prices, Demand, and Welfare (with Gabor Molnar and Scott Savage) </li>
 		<li>Brand Power, Pass-through, and Consumption Effects of Municipal Taxes: Evidence from Berkeley, CA</li>
 		</ul>
 	
  		<h2> Works in Progress: </h2>
 		<ul>
-		<li>Milking It: Exploring the impact of plant-based dairy alternatives in the US (with Jacob Peacock) </li>
 		<li>Estimating BCC-compliant chicken demand from US food businesses (with George Garcia, III) </li>
-		<li>Impact of Corporate Commitments to Source Cage-Free Eggs on Layer Hen Housing (with Jacob Peacock and Matt Butner)</li>
 		</ul>
 	
 		<h2> Research Experience: </h2> 
 		<ul>
 		<li> Using Classroom Observation Technology to Assess Teaching Improvement in Short-Term Microteaching Environments, <br> Teaching as Research Experimental Study, CU Boulder (2017) </li>
-   		 <li>Research assistance for Dr. Scott Savage, University of Colorado, Boulder (2015) </li>
+   		<li>Research assistance for Dr. Scott Savage, University of Colorado, Boulder (2015) </li>
     		<li>Project Management for Assistant Vice Chancellor for Research, University of Colorado Boulder (2015) </li>
     		<li>Research assistance for Drs. Valerie Bencivenga and Beatrix Paal, University of Texas, Austin (2013)		 </li>
     </ul>
