update link titles

--- a/research/index.html
+++ b/research/index.html
@@ -6,8 +6,7 @@ title: Samara Mendez
  		<h2> Publications: </h2>
 		<ul> 
 		<li><a href="https://doi.org/10.1086/714504">The Impacts of the Lifeline Subsidy on High-Speed Internet Access (with Gabor Molnar and Scott Savage) </li>
-		<li><a href="https://doi.org/10.31219/osf.io/j89qm">Milking It: Exploring the impact of plant-based dairy alternatives in the US (with Jacob Peacock) </li>
-		<li><a href="https://doi.org/10.31219/osf.io/tdghp">Milking It: Exploring the impact of plant-based dairy alternatives in the US - Preregistration (with Jacob Peacock) </li>
+		<li><a href="https://doi.org/10.31219/osf.io/j89qm">Milking It: Exploring the impact of plant-based dairy alternatives in the US (with Jacob Peacock) <a href="https://doi.org/10.31219/osf.io/tdghp"> (Preregistration) </li>
 		<li><a href="https://doi.org/10.31219/osf.io/hkrsm">Impact of Corporate Commitments to Source Cage-Free Eggs on Layer Hen Housing - Preregistration (with Jacob Peacock and Matt Butner)</li>
 		<li><a href="https://doi.org/10.31219/osf.io/8v2k9">Measuring Better Chicken Commitment–Compliant Chicken Supply</a> </li>
 		<li><a href="https://doi.org/10.31219/osf.io/wta3q">US Egg Production Data Set</a> </li>
