--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Samara Mendez
 
 <div class="blurb">
 	
-	<p>Economist at Rethink Priorities </p>
+	<p>Senior Economist at Rethink Priorities </p>
 	<p> PhD, 2019 University of Colorado Boulder  </p>
 	<p> Industrial Organization, Environmental Economics, Agricultural Economics, <br> and Behavioral Economics </p> 
 	<p>Emphasis on the impact of food policies on animals and people. </p> 
