--- a/research/index.html
+++ b/research/index.html
@@ -24,7 +24,7 @@ title: Samara Mendez
 		<li>Estimating BCC-compliant chicken demand from US food businesses (with George Garcia, III) </li>
 		</ul>
 	
-		<h2> Research Experience: </h2> 
+		<h2> Other Research Experience: </h2> 
 		<ul>
 		<li> Using Classroom Observation Technology to Assess Teaching Improvement in Short-Term Microteaching Environments, <br> Teaching as Research Experimental Study, CU Boulder (2017) </li>
    		<li>Research assistance for Dr. Scott Savage, University of Colorado, Boulder (2015) </li>
